--- a/src/styles/_globals.scss
+++ b/src/styles/_globals.scss
@@ -6,8 +6,8 @@ body {
     @include fluid-text(32, 10.6);
     letter-spacing: 0.03em;
     font-weight: 100;
+    overflow-x: hidden;
     color: var(--color-light);
-    overflow: hidden;
     #root {
         div {
             .background {
@@ -44,9 +44,6 @@ body {
                 @include flex-center(false, false);
                 height: 100vh;
                 .navbar {
-                    .select-wrapper{
-                        display: flex;
-                    }
                     display: flex;
                     justify-content: end;
                     align-items: center;
@@ -58,6 +55,12 @@ body {
                     background-color: var(--color-dark-blue);
                     width: 100%;
                     height: rem(64);
+
+                    
+                    .select-wrapper{
+                        display: flex;
+                    }
+                    
 
                     &__login-icon {
                         @include mobile {
@@ -80,57 +83,47 @@ body {
 
 
                     }
-
-                    &__make-doc {
-                        position: absolute;
-                        left: 50%;
-                        transform: translateX(-50%); 
+                    &__make-doc, .templates-btn, &__login-button {
+                        position: relative;
+                        cursor: pointer;
                         background: none;
-                        color: var(--color-light);
-                        transition: all 0.3s ease; // Плавные анимации для всех изменений
                         border: none;
-
+                        transition: all 0.3s ease; // Плавные анимации для всех изменений
+                        @include fluid-text(28,14);   
+                        color: var(--color-light);
+                        border-radius: fluid(6, 2);
+                        // Стили при активном нажатии
+                        &:active {
+                            color: var(--color-dark); // Темнее обычного
+                            transform: scale(0.98); // Эффект "нажатия"
+                        }
                         // Стили при наведении
                         &:hover {
                             background-color: var(--color-purple);
                             border-radius: fluid(10, 3.3);
-                            color: var(--color-accent); // Яркий цвет при наведении
-                            transform: translateX(-50%) scale(1.05); // Легкое увеличение
+                            color: var(--color-light); // Яркий цвет при наведении
+                            transform: scale(1.05); // Легкое увеличение
                         }
-
-                        // Стили при активном нажатии
-                        &:active {
-                            color: var(--color-accent-dark); // Темнее обычного
-                            transform: translateX(-50%) scale(0.98); // Эффект "нажатия"
-                        }
-
-                        // Дополнительно: стили для фокуса (доступность)
                         &:focus-visible {
                             outline: 2px solid var(--color-accent);
                             outline-offset: 2px;
                         }
                     }
-
+                    &__make-doc, .templates-btn {
+                        margin-right: fluid(21, 7);
+                    }
+                
                     &__login-button {
-                        background: none;
-                        border: none;
-                        color: var(--color-light); /* Цвет текста */
-                        @include fluid-text(24,8);
-                        cursor: pointer;
+                        
                         margin: fluid(12, 4) 0;
                         margin-right: fluid(40, 13.3);
-                        border-radius: 5px;
-                        transition: background-color 0.3s;
                         padding-left: fluid(20, 6.66);
 
                         appearance: none; // Убирает стандартную стрелку
                         -webkit-appearance: none;
                         -moz-appearance: none;
 
-                        &:hover, &:active, &:focus {
-                            background-color: var(--color-purple);
-                            
-                          }
+                     
                         option {
                             background-color: rgba(0, 42, 73, 0.9);
                             cursor: pointer;
@@ -315,7 +308,7 @@ h2, h3 {
     background: var(--color-light-2);
     padding: fluid(20, 6.66);
     border-radius: fluid(9, 3);
-    max-width: 400px;
+    max-width: rem(400);
     width: 100%;
     box-shadow: 0 fluid(2, 1) fluid(10, 5) rgba(0, 0, 0, 0.1);
 
